--- a/src/pages/Sobre/sobre.styles.css
+++ b/src/pages/Sobre/sobre.styles.css
@@ -4,12 +4,19 @@
     align-items: center;
     justify-content: center;
     gap: 30px;
-    margin-top: 300px;
+    margin-top: 50px;
+    padding: 50px;
   }
   
   .main img {
-    width: 200x;
-    height: 200px;
+    justify-content: center;
+    text-align: center;
+    margin-top: 0;
+    width: 300x;
+    height: 300px;
+    border: 2px solid black;
+    border-radius: 50%;
+    
   }
   
   .main h2 {
